joplin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-server
  namespace: joplin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joplin-server
  template:
    metadata:
      labels:
        app: joplin-server
    spec:
      containers:
        - name: joplin
          image: joplin/server:latest
          ports:
            - containerPort: 22300
volumeMounts:
  - name: joplin-data
    mountPath: /home/joplin/data
volumes:
  - name: joplin-data
    persistentVolumeClaim:
      claimName: joplin-data-pvc
