service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: joplin-server
  namespace: joplin
spec:
  ports:
    - port: 22300
      targetPort: 22300
  selector:
    app: joplin-server
